# Inventory-Management-API

./: .env  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 7e4b8ea6383a_no_schema_change.py
app/: config.py  main.py
app/database/: __init__.py
app/database/models/: entities.py
app/routes/: product_routes.py  stock_routes.py
app/utils/: api_response.py  dependencies.py  enums.py
